// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorList Container should render Default 1`] = `
<DocumentFragment>
  <article
    class="css-15dwznv e1inpocy0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
      href="example-slug"
    >
      <div
        class="css-1dskvzn eyyziki0"
      >
        <img
          alt="DSC07717"
          class="css-10xre0n-AuthorListItem e1nfkf2e0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-0 eyyziki1"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
      href="example-slug"
    >
      <div
        class="css-1dskvzn eyyziki0"
      >
        <img
          alt="DSC07717"
          class="css-10xre0n-AuthorListItem e1nfkf2e0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-0 eyyziki1"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
      href="example-slug"
    >
      <div
        class="css-1dskvzn eyyziki0"
      >
        <img
          alt="DSC07717"
          class="css-10xre0n-AuthorListItem e1nfkf2e0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-0 eyyziki1"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithClassName 1`] = `
<DocumentFragment>
  <article
    class="extra-classname css-15dwznv e1inpocy0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
      href="example-slug"
    >
      <div
        class="css-1dskvzn eyyziki0"
      >
        <img
          alt="DSC07717"
          class="css-10xre0n-AuthorListItem e1nfkf2e0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-0 eyyziki1"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
      href="example-slug"
    >
      <div
        class="css-1dskvzn eyyziki0"
      >
        <img
          alt="DSC07717"
          class="css-10xre0n-AuthorListItem e1nfkf2e0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-0 eyyziki1"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
      href="example-slug"
    >
      <div
        class="css-1dskvzn eyyziki0"
      >
        <img
          alt="DSC07717"
          class="css-10xre0n-AuthorListItem e1nfkf2e0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-0 eyyziki1"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithEmotion 1`] = `
<DocumentFragment>
  <article
    class="css-15dwznv e1inpocy0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
      href="example-slug"
    >
      <div
        class="css-1dskvzn eyyziki0"
      >
        <img
          alt="DSC07717"
          class="css-10xre0n-AuthorListItem e1nfkf2e0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-0 eyyziki1"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
      href="example-slug"
    >
      <div
        class="css-1dskvzn eyyziki0"
      >
        <img
          alt="DSC07717"
          class="css-10xre0n-AuthorListItem e1nfkf2e0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-0 eyyziki1"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
      href="example-slug"
    >
      <div
        class="css-1dskvzn eyyziki0"
      >
        <img
          alt="DSC07717"
          class="css-10xre0n-AuthorListItem e1nfkf2e0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-0 eyyziki1"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;
